# ucas-cplab

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  CMakeLists.txt  README.md
.github/workflows/: cmake-single-platform.yml
assets/: PR2-CACT-任务书-2026S.md  PR2-CACT-实验指导-2026S.md
docs/: dataflow.md  dead_block.md  dead_code.md  ir.md  ssa.md  vm.md
docs/bugs/: dead_block.md  lowering.md  vm.md
docs/reports/p1/: main.typ
docs/reports/p2/: main.typ  report.typ  slide.typ
docs/reports/p2/sections/: analysis.typ  bug.typ  demo.typ  design.typ  generate.typ  ir.typ  main.typ  optimize.typ
docs/reports/p3/: report.typ
docs/reports/p3/sections/: codegen-asm.typ  codegen-ir.typ  codegen.typ  demo.typ  optimize.typ  problem.typ  reference.bib
docs/reports/preamble/: meta.typ  preamble.typ  theme.typ
grammar/: CACT.g4  IR.g4  ir.sublime-syntax
scripts/: autotest.sh  check_include.sh  fetch_usage.py  gen_tree_with_brief.py  generate_code_tree.py  test_all.sh  test_isel.sh  test_lowering.sh  test_optimize.sh  update_readme.py
src/: check_include.sh  compiler.cpp  interpreter.cpp  main.cpp
src/backend/ir/: adt.h  alloc.cpp  block.cpp  func.cpp  inst.cpp  ir.h  ir.hpp  op.h  op.hpp  program.cpp  semantic.h  type.h  type.hpp  value.cpp
src/backend/ir/analysis/: cfg.hpp  dominance.hpp  usedef.cpp  usedef.h  utils.hpp
src/backend/ir/analysis/dataflow/: dominance.hpp  framework.hpp  liveness.hpp
src/backend/ir/lowering/: abi.hpp  addr.hpp  array.hpp  global.hpp  proxy.hpp  reg2mem.hpp  stdlib.hpp
src/backend/ir/lowering/regalloc/: colorize.hpp  graph.hpp  interfere.hpp  main.hpp  precolorize.hpp  scanmov.hpp  spill.hpp
src/backend/ir/optim/: cfg.hpp  common_expr.hpp  const_propagation.hpp  copy_propagation.hpp  cp.hpp  dataflow.hpp  dde.hpp  dead_alloc.hpp  dead_block.hpp  dead_def.hpp  dominance.hpp  domtree.hpp  framework.hpp  inline.hpp  ssa.hpp  ssa_destruct.hpp
src/backend/ir/optim/dataflow/: active_var.hpp  dominance.hpp  framework.hpp  liveness.hpp
src/backend/ir/optim/pass/: framework.hpp  ssa.hpp
src/backend/ir/parse/: visit.hpp
src/backend/ir/transform/: framework.hpp
src/backend/ir/transform/optim/: common_expr.hpp  const_propagation.hpp  constant_fold.hpp  copy_propagation.hpp  dead_alloc.hpp  dead_block.hpp  dead_def.hpp  inline.hpp  strength_reduce.hpp
src/backend/ir/transform/ssa/: construct.hpp  destruct.hpp
src/backend/ir/vm/: assign.cpp  debug.cpp  exec.cpp  size.hpp  view.hpp  vm.h
src/backend/rv64/: abi.hpp  emit.cpp  emit.hpp  inst.hpp  isel.hpp  module.hpp  op.hpp
src/backend/rv64/optim/: framework.hpp  label.hpp  peephole.hpp
src/backend/rv64/vm/: exec.cpp  vm.hpp
src/frontend/ast/: ast.h  ast.hpp  op.hpp  type.h
src/frontend/ast/analysis/: decl.cpp  expr.cpp  func.cpp  scope.cpp  semantic_ast.h  stmt.cpp  type.cpp
src/frontend/syntax/: error.h  error.hpp  listener.h  visit.h  visit.hpp  visitor.h
src/tests/: test_adt.cpp  test_ast.cpp  test_dessa_phi.cpp  test_dessa_split.cpp  test_dominance.cpp  test_ir.cpp  test_ir_parse.cpp  test_ir_parse_all.cpp  test_irtype.cpp  test_liveness.cpp  test_liveness_all.cpp  test_livenesss_all.cpp  test_optimize.cpp  test_reg2mem.cpp  test_regalloc.cpp  test_regalloc_interfere.cpp  test_regalloc_inversion.cpp  test_regalloc_inversion_example.cpp  test_regalloc_inversion_simplify.cpp  test_regalloc_main.cpp  test_regalloc_precolorize.cpp  test_regalloc_ra.cpp  test_sem.cpp  test_serialize.cpp  test_spill.cpp  test_ssa.cpp  test_vm.cpp
src/utils/: diagnosis.hpp  error.h  error.hpp  match.hpp  serialize.hpp  traits.hpp  tui.h
test/: cact-autotest.sh  cactio.c  libcactio.c  test_semantic.sh  test_syntax.sh
test/samples_codegen_functional/: .gitattributes  000_main.ir  000_main.riir  001_var_defn.ir  001_var_defn.optimized.riir  001_var_defn.riir  002_var_defn2.ir  002_var_defn2.optimized.riir  002_var_defn2.riir  003_var_defn3.ir  003_var_defn3.optimized.riir  003_var_defn3.riir  004_arr_defn.ir  004_arr_defn.optimized.riir  004_arr_defn.riir  005_arr_defn2.ir  005_arr_defn2.riir  006_arr_defn3.ir  006_arr_defn3.optimized.riir  006_arr_defn3.riir  008_const_var_defn.ir  008_const_var_defn.optimized.riir  008_const_var_defn.riir  009_const_var_defn2.ir  009_const_var_defn2.optimized.riir  009_const_var_defn2.riir  010_const_var_defn3.ir  010_const_var_defn3.optimized.riir  010_const_var_defn3.riir  011_const_array_defn.ir  011_const_array_defn.riir  012_func_defn.ir  012_func_defn.optimized.riir  012_func_defn.riir  013_var_defn_func.ir  013_var_defn_func.riir  014_add.ir  014_add.optimized.riir  014_add.riir  015_add2.ir  (+167 more)
test/samples_codegen_functional/intermediate_representation/: 000_main.1optimized.riir  001_var_defn.0raw.riir  001_var_defn.1optimized.riir  001_var_defn.2lowered.riir  002_var_defn2.0raw.riir  002_var_defn2.1optimized.riir  002_var_defn2.2lowered.riir  003_var_defn3.0raw.riir  004_arr_defn.2lowered.riir  005_arr_defn2.0raw.riir  006_arr_defn3.0raw.riir  006_arr_defn3.1optimized.riir  006_arr_defn3.2lowered.riir  008_const_var_defn.0raw.riir  008_const_var_defn.2lowered.riir  009_const_var_defn2.0raw.riir  009_const_var_defn2.2lowered.riir  011_const_array_defn.0raw.riir  011_const_array_defn.2lowered.riir  012_func_defn.0raw.riir  012_func_defn.1optimized.riir  012_func_defn.2lowered.riir  013_var_defn_func.0raw.riir  013_var_defn_func.1optimized.riir  013_var_defn_func.2lowered.riir  014_add.0raw.riir  014_add.2lowered.riir  015_add2.0raw.riir  015_add2.2lowered.riir  016_addc.0raw.riir  017_sub.0raw.riir  018_sub2.0raw.riir  018_sub2.1optimized.riir  018_sub2.2lowered.riir  019_subc.0raw.riir  019_subc.2lowered.riir  020_mul.0raw.riir  020_mul.1optimized.riir  020_mul.2lowered.riir  022_div.0raw.riir  (+130 more)
test/samples_interpreter/: 1-return.c  1-return.cact  11-comp.c  11-comp.cact  12-intpi.c  12-intpi.cact  8-controlflow.c  README.md
tools/: graph_visualizer.html
